--- a/verlen.ini
+++ b/verlen.ini
@@ -1,5 +1,5 @@
 [UPD]
 v=0.2
 build=2
-des=text
-upd=text
+des=Полный список изменений - "Справка"
+upd=1. Был исправлен баг в "Меню взаимодействий". При выдачи лицензии через меню - всегда продавались права.
