--- a/verlen.ini
+++ b/verlen.ini
@@ -2,5 +2,4 @@
 v=0.2
 build=2
 des=Полный список изменений - "Справка"
-upd=1. Был исправлен баг в "Меню взаимодействий". При выдачи лицензии через меню - всегда продавались права.
-2. Добавлены отыгровки в разделе "ОЛ". Теперь можно проверить: 24/7; клубы; закусочные.
+upd=1. Был исправлен баг в "Меню взаимодействий". При выдачи лицензии через меню - всегда продавались права. 2. Добавлены отыгровки в разделе "ОЛ". Теперь можно проверить: 24/7; клубы; закусочные.
